add Facebook auth closes #2

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,7 +2,7 @@
   "type": "postgres",
   "host": "localhost",
   "port": 5432,
-  "username": "matt",
+  "username": "eveline",
   "password": "SuperParamiko42",
   "database": "dringo",
   "entities": ["dist/**/*.entity{.ts,.js}"],
