--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.4",
     "@types/passport": "^1.0.4",
+    "@types/passport-facebook": "^2.1.10",
     "@types/passport-jwt": "^3.0.3",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-facebook-token": "^4.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -54,6 +58,7 @@
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
     "@types/node": "^13.9.1",
+    "@types/passport-facebook-token": "^0.4.34",
     "@types/passport-google-oauth20": "^2.0.4",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
