--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@nestjs/mapped-types": "^0.1.0",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-socket.io": "^7.4.4",
     "@nestjs/typeorm": "^7.1.4",
+    "@nestjs/websockets": "^7.4.4",
     "@types/passport": "^1.0.4",
     "@types/passport-facebook": "^2.1.10",
     "@types/passport-jwt": "^3.0.3",
@@ -60,6 +62,7 @@
     "@types/node": "^13.9.1",
     "@types/passport-facebook-token": "^0.4.34",
     "@types/passport-google-oauth20": "^2.0.4",
+    "@types/socket.io": "^2.1.11",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
