--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/passport": "^1.0.4",
     "@types/passport-facebook": "^2.1.10",
     "@types/passport-jwt": "^3.0.3",
+    "@types/socket.io-redis": "^1.0.26",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
