--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "postinstall": "typeorm:run && npm run prestart:prod",
+    "postinstall": "npm run prestart:prod",
     "prestart:prod": "rimraf dist && npm run build",
     "start": "nest start",
     "start:dev": "nest start --watch",
