--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/platform-ws": "^7.4.4",
     "@nestjs/typeorm": "^7.1.4",
     "@nestjs/websockets": "^7.4.4",
+    "@types/bcrypt": "^3.0.0",
     "@types/passport": "^1.0.4",
     "@types/passport-facebook": "^2.1.10",
     "@types/passport-jwt": "^3.0.3",
